app/styles/media-query/media.home.scss
@media all and (max-width: 1334px){
  .home-container{
    .input-search{
      display: block;
      margin:0 auto;
    }
  }
  
  .home-heading{
    text-align: center;
  }
  
  nav{
    .input-search{
      display: none;
    }
  }

  .home-column{
    display: none;
  }

  .home-img-container{
    margin: 0 auto;
  }

  .home-img{
    display: block;
    left: 0;
    margin: 0 auto;
    width: 60%;
  }
}

.testclass{
  width: 100px;
}

